# file_vault

./: README.md  README.md.local  docker-compose.yml  manage.py  pyproject.toml
backend/: .env.example  Dockerfile  README.md  demo_api.py  manage.py  start.sh
backend/integration_tests/src/: test_api_file_types.py  test_api_retrieve.py  test_file_viewset_methods.py
backend/integration_tests/src/services/: test_rate_limiter_service.py
backend/src/core/: settings.py  urls.py
backend/src/files/: serializers.py  utils.py
backend/src/files/migrations/: 0001_initial.py
files/: models.py  serializers.py  views.py
files/services/: s3_file_service.py
frontend/: .eslintignore  .eslintrc.js  .prettierignore  .prettierrc  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: FileList.tsx  FileUpload.tsx
frontend/src/services/: fileService.ts
frontend/src/types/: file.ts
integration_tests/src/: test_api_create.py  test_api_delete.py  test_api_list.py  test_api_storage_stats.py  test_file_serializer.py  test_file_viewset_methods.py
integration_tests/src/files/: test_deduplication.py
integration_tests/src/services/: test_s3_file_service.py
src/files/: apps.py  views.py
src/services/: rate_limiter_service.py  s3_file_service.py  storage_limit_service.py
