[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Eugene Lee Jun Ping <leejunping@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=4.0,<5.0"
djangorestframework = ">=3.14.0"
django-cors-headers = ">=4.3.0"
gunicorn = ">=21.2.0"
python-dotenv = ">=1.0.0"
whitenoise = ">=6.6.0"
pathspec = "==0.11.2"
mypy-boto3-s3 = "^1.34.0"
boto3 = "^1.39.14"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"
ruff = "^0.12.5"
black = "^25.1.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"